--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,14 @@
 [project]
-name = "stain-normalization-gpu"
+name = "huetuber"
 version = "0.1.0"
 description = "GPU-accelerated stain normalization for histopathology images"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "cupy-cuda12x>=13.6.0",
+]
+
+[dependency-groups]
+dev = [
+    "prek>=0.1.6",
+]
