--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,12 @@ dependencies = [
 
 [dependency-groups]
 benchmark = [
+    "matplotlib>=3.10.6",
+    "mpl-fontkit>=0.5.1",
+    "pandas>=2.3.2",
+    "seaborn>=0.13.2",
     "torchstain>=1.4.1",
+    "unhcrpyplotstyle>=0.1.3",
 ]
 dev = [
     "ipykernel>=6.30.1",
