--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,6 @@ benchmark/result_16k/
 
 # ignore giant benchmark renders
 benchmark/result_16k/
+
+# ignore giant benchmark renders
+benchmark/result_16k/
