--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ authors = [
 dependencies = [
     "cucim>=23.10.0",
     "cupy-cuda12x>=13.6.0",
+    "opencv-python>=4.12.0.88",
     "pillow>=11.3.0",
     "scipy>=1.16.2",
 ]
