--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# ignore giant benchmark renders
+benchmark/result_16k/
+
+# ignore giant benchmark renders
+benchmark/result_16k/
+
+# ignore giant benchmark renders
+benchmark/result_16k/
